fix main color in dark mode packages view

--- a/packages/admin-ui/src/light_dark.scss
+++ b/packages/admin-ui/src/light_dark.scss
@@ -57,6 +57,11 @@
       color: var(--color-dark-maintext);
     }
 
+    // Custom
+    .horizontal-navbar .item.active {
+      color: var(--color-dark-maintext);
+    }
+
     // ====================
     // Bootstrap components
     // ====================
